--- a/templates/polisen_api.html
+++ b/templates/polisen_api.html
@@ -144,19 +144,33 @@
                             <h4 class="mt-2 text-center">Källa</h4>
                             <!--Bootstrap checkbox, switch Polisen-->
                             <div class="form-check form-switch d-flex justify-content-center mt-3">
-                                <input class="form-check-input me-2" type="checkbox" id="switchPolice">
-                                <label class="form-check-label" for="switchPolice"> Polisen.se</label>
-                            </div>
-
-                            <!--Bootstrap checkbox, switch KrisKoll-->
-                            <div class="form-check form-switch d-flex justify-content-center mt-2">
-                                <input class="form-check-input me-2" type="checkbox" id="switchKrisKlar"
+                                <input class="form-check-input" type="checkbox" role="switch" id="switchPolice" checked
                                     onchange="redirectToPage()">
-                                <label class="form-check-label" for="switchKrisKlar"> KrisKlar.se</label>
+                                <label class="form-check-label" for="switchPolice"> Polisen.se</label>
                             </div>
 
                             <script>
                                 function redirectToPage() {
+                                    // Hämta switchen
+                                    var switchPolice = document.getElementById("switchPolice");
+                                    // Om switchen är ikryssad (checked), omdirigera användaren till den angivna sidan
+                                    if (switchPolice.checked) {
+                                        window.location.href = "/Händelser_från_polisen";
+                                    } else{
+                                        window.location.href = "/"
+                                    }
+                                }
+                            </script>
+
+                            <!--Bootstrap checkbox, switch KrisKoll-->
+                            <div class="form-check form-switch d-flex justify-content-center mt-2">
+                                <input class="form-check-input me-2" type="checkbox" id="switchKrisKlar"
+                                    onchange="redirectToPage2()">
+                                <label class="form-check-label" for="switchKrisKlar"> KrisKoll.se</label>
+                            </div>
+
+                            <script>
+                                function redirectToPage2() {
                                     // Hämta switchen
                                     var switchKrisKlar = document.getElementById("switchKrisKlar");
 
@@ -166,6 +180,8 @@
                                     }
                                 }
                             </script>
+
+
                             <div class="d-flex justify-content-center mt-4">
                                 <input type="submit" class="btn btn-dark" value="Hitta händelser">
                             </div>
@@ -179,8 +195,7 @@
             <!-- Main content area where articles will be dynamically displayed -->
 
             <main class="col-12 col-md-9 pb-5">
-                <p id="test"></p>
-
+                <h1 class="ms-4 mt-4">Händelser - Polisen</h1>
             </main>
         </div>
     </div>
@@ -202,6 +217,7 @@
 <!--BootstrapJS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+</script>
 
 </html>
