--- a/templates/chrisis_tips.html
+++ b/templates/chrisis_tips.html
@@ -181,6 +181,16 @@
     <footer class="footer bg-dark p-3" data-bs-theme="dark">
         <div class="container-fluid">
             <div class="row">
+                <div class="col">
+                    <div class="logo-container">
+                        <p id="logohead">K</p>
+                        <div class="logobody-wrapper">
+                            <p class="logobody">RIS</p>
+                            <p class="logobody2">OLL</p>
+                        </div>
+                    </div>
+                </div>
+
             <div class="col">
                     <p class="fhead">Följ oss</p>
                     <p class="ftext">Facebook</p>
@@ -196,19 +206,16 @@
                 </div>
             
                 <div class="col">
-                    <p class="fhead">Om KrisKlar</p>
+                    <p class="fhead">Om KrisKoll</p>
                     <p class="ftext">Om oss</p>
                     <p class="ftext">Kontakta oss</p>
                     <p class="ftext">Hållbarhet</p>
                 </div>
+
         </div>
         
         <hr>
-            <div class="row">
-                <div class="col-2"><span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span></div>
-                <div class="col-10"></div>
-            </div>
-
+            <p id="copy">© 2024 KrisKoll</p>
         </div>
     </footer>
 
