--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,17 @@
 </head>
 
 
+
 <body>
+    <div class="logo-container">
+        <p id="firsth1">K</p>
+        <div class="logobody-wrapper">
+            <p id="secondh1">RIS</p>
+            <p id="thirdh1">OLL</p>
+        </div>
+    </div>
+    <p id="slogan">Ditt bidrag, vår säkerhet.</p>
+
     <!--BootStrap NavBar-->
     <nav class="navbar navbar-expand-sm bg-dark border-bottom border-body" data-bs-theme="dark">
         <div class="container d-md-flex justify-content-end">
