--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f4f3f1;
+    background-color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -14,8 +14,57 @@ main {
 }
 
 main {
-    background-color: #FFDEAD;
+    background-color: #ffffff;
 }
+
+
+/* Header and nav styling */
+#firsth1 {
+    font-size: 100px;
+    float: left;
+    margin-top: 45px;
+    color: #2a2e42;
+    font-weight: bold;
+    line-height: 0%;
+    text-shadow: 2px 2px 5px  grey;
+}
+
+#secondh1 {
+    font-size: 47px;
+    margin-bottom: 3px;
+    margin-top: 49px;
+    font-weight: bold;
+    line-height: 0%;
+    color: #2a2e42;
+    text-shadow: 2px 2px 5px  grey;
+}
+
+#thirdh1 {
+    font-size: 47px;
+    font-weight: bold;
+    margin-bottom: -15px;
+    text-shadow: 2px 2px 5px  grey;
+}
+
+#slogan {
+    background-color: white;
+    text-align: center;
+    font-style: italic;
+    font-family:'Times New Roman', Times, serif;
+    margin-top: 10px;
+}
+
+.navbar {
+    text-decoration: none;
+    list-style: none;
+    display: inline;
+    background-color: white;
+    color:#2a2e42;
+    width: 100%;
+    margin: auto;
+}
+/* Header and nav styling ends here */
+
 
 .btn,
 .navbar {
