--- a/templates/login.html
+++ b/templates/login.html
@@ -95,8 +95,8 @@
     </main>
 
 
-    <!--Footer-->
-    <footer class="footer bg-dark p-3" data-bs-theme="dark">
+<!--Footer-->
+<footer>
         <div class="container-fluid">
             <div class="row">
                 <div class="col">
@@ -129,13 +129,10 @@
                     <p class="ftext">Kontakta oss</p>
                     <p class="ftext">Hållbarhet</p>
                 </div>
-
         </div>
-        
-        <hr>
+            <hr>
             <p id="copy">© 2024 KrisKoll</p>
-        </div>
-    </footer>
+</footer>
 
 
     <!--BootstrapJS-->
