--- a/templates/register.html
+++ b/templates/register.html
@@ -111,46 +111,44 @@
     </div>
 
 
-    <!--Footer-->
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col">
-                    <div class="logo-container">
-                        <p id="logohead">K</p>
-                        <div class="logobody-wrapper">
-                            <p class="logobody">RIS</p>
-                            <p class="logobody2">OLL</p>
-                        </div>
+<!--Footer-->
+<footer>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <div class="logo-container">
+                    <p id="logohead">K</p>
+                    <div class="logobody-wrapper">
+                        <p class="logobody">RIS</p>
+                        <p class="logobody2">OLL</p>
                     </div>
                 </div>
+            </div>
 
-            <div class="col">
-                    <p class="fhead">Följ oss</p>
-                    <p class="ftext">Facebook</p>
-                    <p class="ftext">Instagram</p>
-                    <p class="ftext">Youtube</p>
-                </div>
-            
-                <div class="col">
-                    <p class="fhead">Juridiskt</p>
-                    <p class="ftext">Integritetspolicy</p>
-                    <p class="ftext">Cookiepolicy</p>
-                    <p class="ftext">Sekretessinställningar</p>
-                </div>
-            
-                <div class="col">
-                    <p class="fhead">Om KrisKoll</p>
-                    <p class="ftext">Om oss</p>
-                    <p class="ftext">Kontakta oss</p>
-                    <p class="ftext">Hållbarhet</p>
-                </div>
-
-        </div>
+        <div class="col">
+                <p class="fhead">Följ oss</p>
+                <p class="ftext">Facebook</p>
+                <p class="ftext">Instagram</p>
+                <p class="ftext">Youtube</p>
+            </div>
         
+            <div class="col">
+                <p class="fhead">Juridiskt</p>
+                <p class="ftext">Integritetspolicy</p>
+                <p class="ftext">Cookiepolicy</p>
+                <p class="ftext">Sekretessinställningar</p>
+            </div>
+        
+            <div class="col">
+                <p class="fhead">Om KrisKoll</p>
+                <p class="ftext">Om oss</p>
+                <p class="ftext">Kontakta oss</p>
+                <p class="ftext">Hållbarhet</p>
+            </div>
+    </div>
         <hr>
-            <p id="copy">© 2024 KrisKoll</p>
-        </div>
-    </footer>
+        <p id="copy">© 2024 KrisKoll</p>
+</footer>
 
 
     <!--BootstrapJS-->
