--- a/templates/register.html
+++ b/templates/register.html
@@ -34,7 +34,7 @@
             <!--Inloggad användare-->
             {% if is_logged_in != None %}
             <li><a href="/Ny">Publicera inlägg</a></li>
-            <li><a href="/Profil">Min profil</a></li>
+            <li><a href="/Profil" id="profilebtn">Min profil</a></li>
     
             <!--Inte inloggad användare-->
             {% else %}
