--- a/templates/register.html
+++ b/templates/register.html
@@ -41,20 +41,23 @@
     <div class="container-md">
         <div class="row">
             <main class="col-12 col-md-9 mx-auto">
-                <h1 class="ms-4 mt-4">Registrera dig</h1>
 
                 <div class="px-3 pt-3">
-                    <h4>Som registrerad användare kan du:</h4>
-                    <ul>
-                        <li>Publicera inlägg</li>
-                        <li>Bekräfta andra användares inlägg</li>
-                        <li>Få mejlnotiser vid krissituation i din närhet</li>
-                    </ul>
+                    <div class="leftside">
+                        <h1 class="ms-4 mt-4">Registrera dig</h1>
+                        <h4>Som registrerad användare kan du:</h4>
+                        <br>
+                        <ul>
+                            <li>Publicera inlägg</li>
+                            <li>Bekräfta andra användares inlägg</li>
+                            <li>Få mejlnotiser vid krissituation i din närhet</li>
+                        </ul>
+                        <p>Fyll i dina uppgifter här!</p>
+                    </div>
                 </div>
 
-                <p>Fyll i dina uppgifter nedan!</p>
-                <hr>
-                <!--Alert when registration succeed-->
+                <!-- ÅTERSTÄLL SEN
+                Alert when registration succeed
                 {%if created == True: %}
                 <div class="alert alert-success alert-dismissible fade show" role="alert">
                     <h4 class="alert-heading">Sådärja!</h4>
@@ -62,40 +65,46 @@
                     <a href="/Logga_in" class="btn btn-dark">Logga in</a>
                 </div>
                 {% endif %}
+                -->
 
                 <!--Form shown when registration is not done-->
                 {%if created == False: %}
+                <div class="rightside">
                 <form action="/Registrering" method="POST" class="pb-5" accept-charset="UTF-8">
                     <label for="email" class="form-label h4">
                         Mejladress
                     </label><br>
 
-                    <div class="input-group">
-                        <span class="input-group-text">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-envelope" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
-                            </svg>
-                        </span>
-
-                        <input class="form-control" type="email" id="email" name="email" placeholder="Din mejladress..."
-                            value={{email}}>
-                    </div>
-
+                        <div class="input-group">
+                            <span class="input-group-text">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-envelope" viewBox="0 0 16 16">
+                                    <path
+                                        d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
+                                </svg>
+                            </span>
+                            <input class="form-control" type="email" id="email" name="email" placeholder="Din mejladress..."
+                    value={{email}}>
+                        </div>
                     <p class="feedback_message_register"><small>{{no_email_feedback}}</small></p>
+
                     <label for="birthday" class="mt-3 h4">Födelsedatum</label>
                     <input class="form-control" type="date" id="birthday" name="birthday" value={{birthday}}>
                     <p class="feedback_message_register"><small>{{no_birthday_feedback}}</small></p>
                     <p class="feedback_message_register"><small>{{age_feedback}}</small></p>
+
                     <label for="pwd" class="mt-3 h4">Lösenord</label>
                     <input class="form-control" type="password" id="pwd" name="pwd">
                     <p class="feedback_message_register"><small>{{no_pwd_feedback}}</small></p>
                     <p class="feedback_message_register"><small>{{pwd_feedback}}</small></p>
                     <input class="mt-2" type="checkbox" onclick="togglePassword()"> Visa lösenord
                     <br>
-
-                    <input type="submit" value="Registrera mig" class="btn btn-dark mt-4">
+                    <input class="mt-2" type="checkbox"> Jag intygar att jag är över 16 år.
+                    <br>
+                    <br>
+                    <p>Genom att registrera dig bekräftar du att du har läst och accepterar våra <b>användarvillkor</b> och <b>sekretesspolicy</b>, vilket inkluderar användningen av cookies för att förbättra din användarupplevelse.</p> <!--Genererat av AI-->
+                    <input type="submit" value="Registrera mig" class="logoutbtn">
+                    </div>
                 </form>
                 {% endif %}
             </main>
