--- a/templates/register.html
+++ b/templates/register.html
@@ -41,37 +41,30 @@
     <div class="container-md">
         <div class="row">
             <main class="col-12 col-md-9 mx-auto">
-
-                <div class="px-3 pt-3">
                     <div class="leftside">
-                        <h1 class="ms-4 mt-4">Registrera dig</h1>
-                        <h4>Som registrerad användare kan du:</h4>
-                        <br>
+                        <h3 class="">Registrera dig här!</h1>
+                        <p>Som registrerad användare kan du:</p>
                         <ul>
                             <li>Publicera inlägg</li>
                             <li>Bekräfta andra användares inlägg</li>
-                            <li>Få mejlnotiser vid krissituation i din närhet</li>
+                            <li>Få mejlnotiser vid krissituation i ditt område</li>
                         </ul>
-                        <p>Fyll i dina uppgifter här!</p>
                     </div>
-                </div>
 
-                <!-- ÅTERSTÄLL SEN
-                Alert when registration succeed
+                <!--Alert when registration succeed-->
                 {%if created == True: %}
                 <div class="alert alert-success alert-dismissible fade show" role="alert">
                     <h4 class="alert-heading">Sådärja!</h4>
                     <p>Nu är ditt konto skapat</p>
                     <a href="/Logga_in" class="btn btn-dark">Logga in</a>
-                </div>
-                {% endif %}
-                -->
+                </div>  
+                {%endif‰}
 
                 <!--Form shown when registration is not done-->
                 {%if created == False: %}
                 <div class="rightside">
                 <form action="/Registrering" method="POST" class="pb-5" accept-charset="UTF-8">
-                    <label for="email" class="form-label h4">
+                    <label for="email" class="form-label h7">
                         Mejladress
                     </label><br>
 
@@ -88,12 +81,15 @@
                         </div>
                     <p class="feedback_message_register"><small>{{no_email_feedback}}</small></p>
 
-                    <label for="birthday" class="mt-3 h4">Födelsedatum</label>
+                    <label for="birthday" class="mt-3 h6">Födelsedatum</label>
                     <input class="form-control" type="date" id="birthday" name="birthday" value={{birthday}}>
                     <p class="feedback_message_register"><small>{{no_birthday_feedback}}</small></p>
                     <p class="feedback_message_register"><small>{{age_feedback}}</small></p>
 
-                    <label for="pwd" class="mt-3 h4">Lösenord</label>
+                    <label for="postnummer" class="mt-3 h6">Postnummer</label>
+                    <input class="form-control" type="text" id="postnummer" name="postnummer" placeholder="Behöver ej uppges">
+                    
+                    <label for="pwd" class="mt-3 h6">Lösenord</label>
                     <input class="form-control" type="password" id="pwd" name="pwd">
                     <p class="feedback_message_register"><small>{{no_pwd_feedback}}</small></p>
                     <p class="feedback_message_register"><small>{{pwd_feedback}}</small></p>
@@ -103,8 +99,12 @@
                     <br>
                     <br>
                     <p>Genom att registrera dig bekräftar du att du har läst och accepterar våra <b>användarvillkor</b> och <b>sekretesspolicy</b>, vilket inkluderar användningen av cookies för att förbättra din användarupplevelse.</p> <!--Genererat av AI-->
-                    <input type="submit" value="Registrera mig" class="logoutbtn">
-                    </div>
+                    
+                    <div>
+                        <button type="submit" id="regButton" class="logoutbtn">Registrera mig</button>
+                    </div>              
+
+                </div>
                 </form>
                 {% endif %}
             </main>
