--- a/templates/chrisis_tips.html
+++ b/templates/chrisis_tips.html
@@ -44,120 +44,71 @@
     </nav>
 
 
-    <main class="container-md mt-4 pb-5">
-        <div class="row border-bottom">
-            <div class="col-md-3 general_light_blue"> </div>
-
-            <div class="col-md-9 py-3">
-                <h1 class="ms-4 mt-4">Krishantering</h1>
-                <h5 class="ms-4">Här hittar du användbar information om hur du som privatperson bör agera i olika
-                    typer av nödsituationer, samt vem du kan kontakta i händelse av kris.</h5>
-            </div>
-        </div>
-
-
-        <div class="row mt-4">
-            <div class="col-12 col-lg-7">
-                <!--Card starts here-->
-                <div class="card mx-3 mx-sm-5 mx-md-3 mx-lg-1 my-4 chrisis_tips_card">
-                    <div class="card-body">
-                        <h5 class="card-title">SOS</h5>
-                        <p class="card-text">
-                            Ring alltid <span style="color: red;">112</span> om du befinner dig i en akut nödsituation.
-                            <br>
-                            Ring <span style="color: red;">113 13</span> för information om olyckor och kriser. <br>
-                            Ring <span style="color: red;">114 14</span> för icke akuta polisärenden. <br>
-                            Ring <span style="color: red;">1177</span> för sjukvårdsrådgivning.
+        <div class="container">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="card">
+                  <div class="card-body">
+                    <h2>MSB</h2>
+                    <p>Myndigheten för samhällsskydd och beredskap är en svensk statlig
+                        förvaltningsmyndighet, som sorterar under försvarsdepartementet och tillhör ministern för
+                        civilt försvars ansvarsområde.<br>
+                        <span style="color: red;">Vid en större olycka eller en kris behöver du få veta vad som
+                            händer, hur du själv ska agera och vad ansvariga myndigheter gör. Du kan också behöva
+                            komma i kontakt med dina anhöriga.</span>
+                            <a href="https://www.msb.se" class="btn btn-dark">Läs mer</a>
                         </p>
-                        <a href="https://www.sosalarm.se" class="btn btn-dark">Läs mer</a>
-                    </div>
-                    <img class="card-img-bottom card-img-sizing" src="sos.jpeg" alt="SOS">
+                        <img src="static/msb.webp" class="img-fluid" alt="Placeholder Image">
+                  </div>
                 </div>
-                <!--Card ends here-->
-            </div>
+              </div>
 
-
-            <div class="col-sm-12 col-md-6 col-lg-5">
-                <!--Card starts here-->
-                <div class="card mx-3 mx-sm-5 mx-md-3 mx-lg-1 my-4 chrisis_tips_card">
-                    <div class="card-body">
-                        <h5 class="card-title">MSB</h5>
-                        <p class="card-text">Myndigheten för samhällsskydd och beredskap är en svensk statlig
-                            förvaltningsmyndighet, som sorterar under försvarsdepartementet och tillhör ministern för
-                            civilt försvars ansvarsområde.<br>
-                            <span style="color: red;">Vid en större olycka eller en kris behöver du få veta vad som
-                                händer, hur du själv ska agera och vad ansvariga myndigheter gör. Du kan också behöva
-                                komma i kontakt med dina anhöriga.</span>
-                        </p>
-                        <a href="#" class="btn btn-dark">Läs mer</a>
-                    </div>
-                    <img class="card-img-bottom card-img-sizing" src="https://picsum.photos/240/340" alt="xxx">
+              <div class="col-md-6">
+                <div class="card">
+                  <div class="card-body">
+                    <h2>SOS</h2>
+                    <p>   SOS Alarm Sverige AB är ett svenskt offentligägt företag, som driver nödnumret 112 i Sverige. Bolaget ägs till lika delar av staten och Sveriges Kommuner och Regione och används i hela landet. <br>
+                        <br>
+                          Ring alltid <span style="color: red;">112</span> om du befinner dig i en akut nödsituation. <br>
+                        Ring <span style="color: red;">113 13</span> för information om olyckor och kriser. <br>
+                        Ring <span style="color: red;">114 14</span> för icke akuta polisärenden. <br>
+                        Ring <span style="color: red;">1177</span> för sjukvårdsrådgivning.
+                        <a href="https://www.sosalarm.se" class="btn btn-dark">Läs mer</a> <br>
+                        <img src="static/zoz.png" class="img-fluid" alt="Placeholder Image">
+                    </p>
+                  </div>
                 </div>
-                <!--Card ends here-->
-            </div>
+              </div>
+                
+              <div class="col-md-6">
+                <div class="card">
+                  <div class="card-body">
+                    <h2> Folkhälsomyndigheten</h2>
+                    <p>Folkhälsomyndigheten är en svensk statlig myndighet som har ett nationellt ansvar för folkhälsofrågor. 
+                        Myndigheten verkar för en god folkhälsa och arbetar för att befolkningen ska ha ett skydd mot smittsamma sjukdomar och andra hälsohot.
+                        <span style="color: red;">Telefon till växeln: 010-205 20 00 </span><br>
+                        <a href="https://www.folkhalsomyndigheten.se" class="btn btn-dark">Läs mer</a>
+                        <img src="static/folkmy.png" class="img-fluid" alt="Placeholder Image">
+                    </p>
+                  </div>
+               </div>
+             </div>
 
-
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <!--Card starts here-->
-                <div class="card mx-3 mx-sm-5 mx-md-3 mx-lg-1 my-4 chrisis_tips_card">
-                    <div class="card-body">
-                        <h5 class="card-title">Rubrik</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                            doloribus.</p>
-                        <a href="#" class="btn btn-dark">Läs mer</a>
-                    </div>
-                    <img class="card-img-bottom card-img-sizing" src="https://picsum.photos/290/340" alt="xxx">
+              <div class="col-md-6">
+                <div class="card">
+                  <div class="card-body">
+                    <h2> Kommun</h2>
+                    <p> Kontakta din lokala kommun för inofrmation angående händelser och event som ska ske i staden. Detta kan påverka
+                        vägar och andra typer av begränsningar och risker för dig. För information angående Malmö Stad så kan du läsa mer här! För andra kommuner rekomenderas de officella kommunernas webbsidor.
+                        <a href="https://www.malmo.se" class="btn btn-dark">Läs mer</a>
+                        <img src="static/kommun.png" class="img-fluid" alt="Placeholder Image">
+                    </p>
+                  </div>
                 </div>
-                <!--Card ends here-->
-            </div>
+              </div>
 
 
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <!--Card starts here-->
-                <div class="card mx-3 mx-sm-5 mx-md-3 mx-lg-1 my-4 chrisis_tips_card">
-                    <div class="card-body">
-                        <h5 class="card-title">Rubrik</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                            doloribus.</p>
-                        <a href="#" class="btn btn-dark">Läs mer</a>
-                    </div>
-                    <img class="card-img-bottom card-img-sizing" src="https://picsum.photos/280/340" alt="xxx">
-                </div>
-                <!--Card ends here-->
-            </div>
-
-
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <!--Card starts here-->
-                <div class="card mx-3 mx-sm-5 mx-md-3 mx-lg-1 my-4 chrisis_tips_card">
-                    <div class="card-body">
-                        <h5 class="card-title">Rubrik</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                            doloribus.</p>
-                        <a href="#" class="btn btn-dark">Läs mer</a>
-                    </div>
-                    <img class="card-img-bottom card-img-sizing" src="https://picsum.photos/245/340" alt="xxx">
-                </div>
-                <!--Card ends here-->
-            </div>
-
-            
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <!--Card starts here-->
-                <div class="card mx-3 mx-sm-5 mx-md-3 mx-lg-1 my-4 chrisis_tips_card">
-                    <div class="card-body">
-                        <h5 class="card-title">Rubrik</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                            doloribus.</p>
-                        <a href="#" class="btn btn-dark">Läs mer</a>
-                    </div>
-                    <img class="card-img-bottom card-img-sizing" src="https://picsum.photos/294/340" alt="xxx">
-                </div>
-                <!--Card ends here-->
-            </div>
-        </div>
-    </main>
-
+        </main>
 <!--Footer-->
 <footer>
     <div class="container-fluid">
