--- a/templates/register.html
+++ b/templates/register.html
@@ -58,7 +58,7 @@
                     <p>Nu är ditt konto skapat</p>
                     <a href="/Logga_in" class="btn btn-dark">Logga in</a>
                 </div>  
-                {%endif‰}
+                {% endif %}
 
                 <!--Form shown when registration is not done-->
                 {%if created == False: %}
